fix firework bug

--- a/kvack2.html
+++ b/kvack2.html
@@ -44,7 +44,7 @@
 
             <p><b>Om det skulle bli regn</b>
               är vi så lite utomhus som det går. Vigseln är då i ridhuset.
-              Festlokalen är i så fall öppen från klockan 13 för gäster som är på plats tidigt och man kan också vara i stugorna.
+              Festlokalen är i så fall öppen från klockan 13 för gäster som är på plats tidigt. Stugorna är tillgängliga från kl 15.
               </p>
           </div>
         </div>
@@ -72,12 +72,6 @@
       <h1><i class="fas fa-city"></i> Boende</h1>
       <div class="flexContainer div-container" id="div-container-0">
         <div class="flex">
-          <h2>Bränntorps gård</h2>
-          <img src="assets/branntorp.png"/>
-          <p>På gården där festen äger rum finns ett antal stugor som är våra att använda.</p>
-          <p>När inbjudningarna skickas ut finns det både enstaka sängplatser och hela stugor lediga. Dessa går att boka för 250 kr per sängplats. Anmäl intresse genom att mejla <a href="" class="mailto">obfgnq@ivqnbpuznephf.fr</a>. Vi ser gärna att alla sängplatser på gården nyttjas så gå gärna ihop flera som kan tänka sig att dela rum.</p>
-        </div>
-        <div class="flex">
           <h2>Asplunda gård</h2>
           <img src="assets/asplunda.jpg"/>
           <p>Gård på 15 minuters promenad från Bränntorp. Tänk på att Kolmården är ett populärt besöksmål under tiden för bröllopet och att boenden snabbt bokas upp.</p>
@@ -90,14 +84,26 @@
           <p>Stugorna finns att boka på <a href="https://www.booking.com">booking.com</a>.</p>
         </div>
         <div class="flex">
+          <h2>Kolmården och runtom</h2>
+          <img src="assets/kolmarden.png"/>
+          <p>I området runt Kolmården och Krokek finns flera boenden utöver de tidigare nämnda, som exempelvis <a href="http://www.sandviksgarden.se/">Sandviksgården</a> och <a href="http://skogsvikens-hotell.sverigeboende.se/">Skogsviken Hotell</a>. Dessa är på liknande avstånd som First Camp Kolmården.</p>
+        </div>
+        <div class="flex">
           <h2>Centrala Norrköping</h2>
           <img src="assets/nkpg.jpg"/>
           <p>I Norrköping finns flera hotell och vandrarhem med olika prisklasser och det går lätt att ta sig till och från centrala Norrköping från Bränntorps gård.</p>
           <p>Med bil tar resan under 30 minuter och med buss (420) omkring 35 minuter.</p>
           <p>Närmaste busshållplatsen (<b>Marmorbruksvägen</b>) ligger 5 minuter från gården men senare på natten kan man behöva gå bort till <b>Sandviken</b>, vilket är en promenad på 20 minuter.</p>
         </div>
+        <div class="flex">
+          <h2>Bränntorps gård</h2>
+          <img src="assets/branntorp.png"/>
+          <p>På gården där festen äger rum är de fåtalet stugor som finns upptagna.</p>
+          <p>Det finns plats för såväl tält som husvagn. Maila gärna <a href="" class="mailto">obfgnq@ivqnbpuznephf.fr</a> om du vill ha mer information om detta. Toaletter finns att tillgå i anslutning till festlokalen.</p>
+        </div>
       </div>
       <div class="dot-container" id="dot-container-0">
+        <span class="dot"></span> 
         <span class="dot"></span> 
         <span class="dot"></span> 
         <span class="dot"></span> 
@@ -125,5 +131,6 @@
     </section>
   </main>
   <script src="script.js"></script>
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 </html>
