--- a/index.html
+++ b/index.html
@@ -70,41 +70,34 @@
     </section>
     <section id="housing">
       <h1><i class="fas fa-city"></i> Boende</h1>
+      <p>Maila gärna <a href="" class="mailto">obfgnq@ivqnbpuznephf.fr</a> om du vill ha mer information eller tips om boende eller samåkning.</p>
       <div class="flexContainer div-container" id="div-container-0">
         <div class="flex">
-          <h2>Asplunda gård</h2>
+          <h2>Kolmården-området</h2>
           <img src="assets/asplunda.jpg"/>
-          <p>Gård på 15 minuters promenad från Bränntorp. Tänk på att Kolmården är ett populärt besöksmål under tiden för bröllopet och att boenden snabbt bokas upp.</p>
-          <p>Stugorna finns att boka på <a href="https://www.booking.com">booking.com</a>.</p>
-        </div>
-        <div class="flex">
-          <h2>First Camp Kolmården</h2>
-          <img src="assets/firstcamp.jpeg"/>
-          <p>Stugcamping på 20 minuters promenad från Bränntorp. Tänk på att Kolmården är ett populärt besöksmål under tiden för bröllopet och att boenden snabbt bokas upp.</p>
-          <p>Stugorna finns att boka på <a href="https://www.booking.com">booking.com</a>.</p>
-        </div>
-        <div class="flex">
-          <h2>Kolmården och runtom</h2>
-          <img src="assets/kolmarden.png"/>
-          <p>I området runt Kolmården och Krokek finns flera boenden utöver de tidigare nämnda, som exempelvis <a href="http://www.sandviksgarden.se/">Sandviksgården</a> och <a href="http://skogsvikens-hotell.sverigeboende.se/">Skogsviken Hotell</a>. Dessa är på liknande avstånd som First Camp Kolmården.</p>
+          <p>Området närmast gården (Kolmården, Krokek, Marmorbruket) har flera boendemöjligheter och på hyfsat gångavstånd (1-1,5 km). Bland annat (Ev fullbokade): 
+            <a href="https://www.booking.com/searchresults.sv.html?ss=First+Camp+Kolm%C3%A5rden-Norrk%C3%B6ping%252C+Kolm%C3%A5rden%252C+%C3%96sterg%C3%B6tland%252C+Sverige">First Camp Kolmården</a>,
+            <a href="https://www.booking.com/searchresults.sv.html?ss=asplunda+g%C3%A5rd&ssne=Kolm%C3%A5rden">Asplunda Gård</a>
+            <a href="http://www.sandviksgarden.se/">Sandviksgården</a> 
+            och <a href="http://skogsvikens-hotell.sverigeboende.se/">Skogsviken Hotell</a>.</p>
+          <p>Med bil eller taxi finns exempelvis <a href="">Stavsjö Vandrarhem</a> 12 km bort.</p>
+          <p>Se också <a href="http://www.booking.com">booking.com</a> samt <a href="http://www.airbnb.com">AirBnB</a> för fler alternativ.</p>
         </div>
         <div class="flex">
           <h2>Centrala Norrköping</h2>
           <img src="assets/nkpg.jpg"/>
-          <p>I Norrköping finns flera hotell och vandrarhem med olika prisklasser och det går lätt att ta sig till och från centrala Norrköping från Bränntorps gård.</p>
-          <p>Med bil tar resan under 30 minuter och med buss (420) omkring 35 minuter.</p>
+          <p>I Norrköping finns flera hotell och vandrarhem i alla prisklasser.</p>
+          <p>Med bil tar resan från Bränntorps gård till centrala Norrköping under 25 minuter och med buss (420) omkring 35 minuter.</p>
           <p>Närmaste busshållplatsen (<b>Marmorbruksvägen</b>) ligger 5 minuter från gården men senare på natten kan man behöva gå bort till <b>Sandviken</b>, vilket är en promenad på 20 minuter.</p>
         </div>
         <div class="flex">
           <h2>Bränntorps gård</h2>
           <img src="assets/branntorp.png"/>
-          <p>På gården där festen äger rum är de fåtalet stugor som finns upptagna.</p>
-          <p>Det finns plats för såväl tält som husvagn. Maila gärna <a href="" class="mailto">obfgnq@ivqnbpuznephf.fr</a> om du vill ha mer information om detta. Toaletter finns att tillgå i anslutning till festlokalen.</p>
+          <p>På gården där festen äger rum är stugorna redan upptagna.</p>
+          <p>Men det finns plats för såväl tält som husvagn. Toaletter finns att tillgå i anslutning till festlokalen.</p>
         </div>
       </div>
       <div class="dot-container" id="dot-container-0">
-        <span class="dot"></span> 
-        <span class="dot"></span> 
         <span class="dot"></span> 
         <span class="dot"></span> 
         <span class="dot"></span> 
