--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="#map"><i class="fas fa-map"></i><span> Karta</span></a></li>
         <!--<li><a href="#housing"><i class="fas fa-city"></i><span> Boende</span></a></li>-->
         <li><a href="#toastmasters"><i class="fas fa-bullhorn"></i><span> Toastmasters</span></a></li>
+        <li><a href="#photo"><i class="fas fa-camera"></i><span> Foto</span></a></li>
         <!--<li><a href="#rsvp"><i class="fas fa-envelope"></i><span> OSA</span></a></li>-->
       </ul>
     </nav>
@@ -114,6 +115,16 @@
         <img src="assets/dinton1.jpg"/>
 
         <p>Vill du hålla ett tal eller något annat typ av framförande på festen? Allt är möjligt! Kontakta i så fall våra toastmasters på <a href="" class="mailto">ivqnbpuznephf.gbnfgznfgref@bhgybbx.pbz</a>.</p>
+      </div>
+    </section>
+    <section id="photo">
+      <h1><i class="fas fa-camera"></i> Toastmasters</h1>
+      <div class="narrow">
+        <p>Vi vill hemskt gärna att du delar alla bilder från idag!</p>
+
+        <img src="assets/qr.png"/>
+
+        <p>Scanna QR-koden eller gå till <a href="https://vidaochmarcus.se/foto">vidaochmarcus.se/foto</a>.</p>
       </div>
     </section>
     <!--
