--- a/index.html
+++ b/index.html
@@ -37,24 +37,20 @@
             <img src="assets/wedding.jpg"/>
           </div>          
           <div class="flex">
-          <h2>Adress</h2>
-            <p><b>Bränntorps Gård</b></p>
-            <p><b>618 92 Kolmården</b></p>
-            <p>Både vigsel och fest äger rum på gården.</p>
-            <p>Scrolla ner för att se karta.</p>
-          </div>
           <div class="subFlexLarge left">
             <h2>Hålltider</h2>
             <p><b>14:30</b> Borgerlig vigselceremoni</p>
             <p><b>kl 15</b> Mingel, snittar och fotografering</p>
             <p><b>kl 17</b> Bröllopsmiddag</p>
-            <p><b>c:a kl 21</b> Tårta</p>
-            <p><b>c:a kl 23</b> Fest med musik och dans</p>
+            <p><b>c:a 20:30</b> Paus innan tårta</p>
+            <p><b>c:a 22:30</b> Brudvals, följt av fest med musik och dans</p>
 
             <p><b>Om det skulle bli regn</b>
               är vi så lite utomhus som det går. Vigseln är då i ridhuset.
               Festlokalen är i så fall öppen från klockan 13 för gäster som är på plats tidigt. Stugorna är tillgängliga från kl 15.
               </p>
+            
+            <p><b>Klädkod:</b> Kavaj</p>
           </div>
         </div>
       </div>
